--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <h1>Title New Feature</h1>
 
-<h1>This is the development version REALLY.</h1>
-<h1>Try to update form local machine.</h1>
+<h1>This is the MASTER version.</h1>
 
 <p>Paragraph 1</p>
 <p>Paragraph 2</p>
