--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Title New Feature</h1>
 
-<h1>This is the development version REALLY</h1>
+<h1>This is the DEVELOPMENT version.</h1>
 
 <p>Paragraph 1</p>
 <p>Paragraph 2</p>
