--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <h1>Trying to edit from local machine.</h1>
 <h1>Apakah bisa ke branch lain?</h1>
 
+<p>Paragraph dari github</p>
+
 <p>Paragraph 1</p>
 <p>Paragraph 2</p>
 <p>Paragraph 3</p>
