--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <h1>Apakah bisa ke branch lain?</h1>
 
 <p>Paragraph dari github</p>
+<p>Paragraph dari github</p>
 
 <p>Paragraph 1</p>
 <p>Paragraph 2</p>
