--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <p>Paragraph dari local</p>
 
-<p>Paragraph dari local dev 2</p>
+<p>Paragraph dari local dev 2 pake master</p>
 
 <p>Paragraph 1</p>
 <p>Paragraph 2</p>
